@@ -4,16 +4,6 @@ Typsystem:
 - beschreiben, welche Java Typen auch als Murmeltyp akzeptiert werden, z.B. numberp Number -> t (steht in murmel-langref eh schon unter "numberp, integerp, floatp" beschrieben)
 
 
-- ArrayList, StringBuilder, BitSet integrieren als "nicht simple-":
-  t                                 Murmel prädikat
-    vector                          vectorp
-      string                        stringp             r/w und adjustable      CharSequence, StringBuilder() 
-        simple-string               simple-string-p     r/w, nicht adjustable   char[]
-          (immutable-simple-string)                     ro                      String, wird nur mit stringliteralen erzeugt
-      
-  -> (make-array size [type [adjustablep]])
-  -> vector-push-extend
-
 vielleicht sequence-ref in core Murmel, macht dasselbe wie elt
 und sequence-set
 -> damit brauchts kein gesondertes aref, in mlib könnten typecases wegfallen, hätte auch einen fastpath für nth, insb. für arrayslice
