@@ -1816,3 +1816,14 @@ svset, sbvset: parameter sollten sein: sequence, newvalue, index
 mlib: error beschreiben
 
 langref: bitvector beschreiben
+
+
+- ArrayList, StringBuilder, BitSet integrieren als "nicht simple-":
+  t                                 Murmel prädikat
+    vector                          vectorp
+      string                        stringp             r/w und adjustable      CharSequence, StringBuilder() 
+        simple-string               simple-string-p     r/w, nicht adjustable   char[]
+          (immutable-simple-string)                     ro                      String, wird nur mit stringliteralen erzeugt
+      
+  -> (make-array size [type [adjustablep]])
+  -> vector-push-extend, adjustable-array-p
