@@ -677,7 +677,7 @@ Examples:
 - `integerp` returns `t` for Murmel's integral number type (which internally is a `Long`).
 - `floatp` returns `t` for Murmel's decimal number type (which internally is a `Double`).
 
-### (make-array length [element-type [adjustable-p]]) -> vector
+### (make-array length [element-type [adjustablep]]) -> vector
 
 Only one-dimensional simple arrays of element-type t, 'bit or 'character are supported.
 
