@@ -16,7 +16,8 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
  * added functionp
  * added simple-string-p
  * added vector support:
-   * make-array, vector, vector-length, vectorp, simple-vector-p, svref, svset and svlength
+   * make-array, vector, vector-length, vectorp, adjustable-array-p, vector-push-extend
+   * simple-vector-p, svref, svset and svlength
    * list->simple-vector and simple-vector->list
  * added bitvector support:
    * simple-bit-vector-p, sbvref (similar to CL sbit), sbvset, sbvlength and sbv=
